--- a/sabnzbd/Dockerfile
+++ b/sabnzbd/Dockerfile
@@ -1,3 +1,3 @@
-FROM ghcr.io/linuxserver/sabnzbd:latest
+FROM ghcr.io/linuxserver/sabnzbd:3.7.1-ls88
 COPY rootfs /
 VOLUME /data /media /share /ssl
