--- a/eufy-security/Dockerfile
+++ b/eufy-security/Dockerfile
@@ -1,3 +1,3 @@
-FROM ghcr.io/evilmarty/eufy-security-mqtt:latest
+FROM ghcr.io/evilmarty/eufy-security-mqtt:0.4.1
 CMD ["--hassio", "--config", "/data/options.json"]
 VOLUME /data
