--- a/lidarr/Dockerfile
+++ b/lidarr/Dockerfile
@@ -1,3 +1,3 @@
-FROM ghcr.io/linuxserver/lidarr:latest
+FROM ghcr.io/linuxserver/lidarr:1.0.2.2592-ls105
 COPY rootfs /
 VOLUME /data /media /share /ssl
