--- a/sonarr/Dockerfile
+++ b/sonarr/Dockerfile
@@ -1,3 +1,3 @@
-FROM ghcr.io/linuxserver/sonarr:latest
+FROM ghcr.io/linuxserver/sonarr:3.0.9.1549-ls169
 COPY rootfs /
 VOLUME /data /media /share /ssl
