--- a/.github/workflows/dependabot-update.yml
+++ b/.github/workflows/dependabot-update.yml
@@ -1,11 +1,6 @@
 name: Dependabot update config
 on: pull_request
 
-permissions:
-  pull-requests: write
-  issues: write
-  repository-projects: write
-
 jobs:
   dependabot:
     runs-on: ubuntu-latest
@@ -25,6 +20,8 @@ jobs:
     needs: dependabot
     runs-on: ubuntu-latest
     if: ${{ needs.dependabot.outputs.package-ecosystem == 'docker' }}
+    permissions:
+      packages: write
     outputs:
       name: ${{ steps.config.outputs.name }}
       directory: ${{ needs.dependabot.outputs.directory }}
@@ -73,6 +70,9 @@ jobs:
   update:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+      issues: write
     defaults:
       run:
         working-directory: .${{ needs.build.outputs.directory }}
