--- a/.github/workflows/dependabot-update.yml
+++ b/.github/workflows/dependabot-update.yml
@@ -94,5 +94,4 @@ jobs:
           git config user.email github-actions@github.com
           git add "$CONFIG_FILE"
           git commit -m "Version bump $ADDON to $NEW_VERSION"
-          git pull --rebase --quiet
-          git push --quiet
+          git push origin "$GITHUB_HEAD_REF" --quiet
