Remove eufy-security from build-update.yml workflow

--- a/.github/workflows/build-update.yml
+++ b/.github/workflows/build-update.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        addon: [ sabnzbd, sonarr, radarr, lidarr, eufy-security ]
+        addon: [ sabnzbd, sonarr, radarr, lidarr ]
     env:
       CONFIG_FILE: "${{ matrix.addon }}/config.json"
     steps:
