--- a/sabnzbd/config.json
+++ b/sabnzbd/config.json
@@ -7,8 +7,7 @@
   "image": "ghcr.io/evilmarty/hassio-sabnzbd",
   "arch": [
     "amd64",
-    "aarch64",
-    "armhf"
+    "aarch64"
   ],
   "startup": "application",
   "init": false,
