--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.ref || github.ref_name }}
+          token: ${{ secrets.token }}
       - id: config
         name: Extract config version
         env:
