Update dependabot.yml schedules

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,8 +3,10 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "friday"
   - package-ecosystem: "docker"
     directory: "livebook/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "friday"
