--- a/sonarr/test.yaml
+++ b/sonarr/test.yaml
@@ -1,10 +1,10 @@
 schemaVersion: "2.0.0"
 
 fileExistenceTests:
-  - name: Sonarr.exe
-    path: /app/sonarr/bin/Sonarr.exe
+  - name: Sonarr
+    path: /app/sonarr/bin/Sonarr
     shouldExist: true
-    permissions: "-rw-r--r--"
+    permissions: "-rwxr-xr-x"
     uid: 0
     gid: 0
 
@@ -12,16 +12,10 @@ fileContentTests:
   - name: Sonarr run
     path: /etc/s6-overlay/s6-rc.d/svc-sonarr/run
     expectedContents:
-      - "s6-setuidgid abc mono --debug Sonarr.exe"
+      - "s6-notifyoncheck -d -n 300 -w 1000"
+      - "s6-setuidgid abc /app/sonarr/bin/Sonarr"
       - "-data=/data/config"
       - "-nobrowser"
-
-commandTests:
-  - name: Mono
-    command: mono
-    args: [--version]
-    expectedOutput: ["Mono JIT compiler version 6.12."]
-    exitCode: 0
 
 metadataTest:
   exposedPorts:
