--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,14 @@ on:
     secrets:
       token:
         required: true
+  workflow_dispatch:
+    inputs:
+      addon:
+        required: true
+        type: string
+      publish:
+        type: boolean
+        default: false
 
 jobs:
   build:
@@ -36,7 +44,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref || github.ref_name }}
-          token: ${{ secrets.token }}
+          token: ${{ secrets.token || secrets.GITHUB_TOKEN }}
       - id: config
         name: Extract config version
         env:
@@ -54,7 +62,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.token }}
+          password: ${{ secrets.token || secrets.GITHUB_TOKEN }}
       - name: Build test container
         run: docker build -t ${{ inputs.addon }}:${{ github.sha }} ${{ inputs.addon }}
       - name: Test container
