--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -47,7 +47,7 @@ jobs:
         name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.token }}
+          token: ${{ secrets.PAT }}
           branch: "update/${{ inputs.addon }}/${{ inputs.version }}"
           delete-branch: true
           labels: docker,addon
