--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -25,7 +25,6 @@ on:
 jobs:
   pr:
     runs-on: ubuntu-latest
-    environment: publisher
     outputs:
       url: ${{ steps.create.outputs.pull-request-url }}
       ref: ${{ steps.create.outputs.pull-request-head-sha }}
@@ -47,7 +46,7 @@ jobs:
         name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.token }}
           branch: "update/${{ inputs.addon }}/${{ inputs.version }}"
           delete-branch: true
           labels: docker,addon
