--- a/.github/workflows/scheduled-check.yml
+++ b/.github/workflows/scheduled-check.yml
@@ -2,17 +2,17 @@ name: Scheduled check and update
 
 on:
   schedule:
-    - cron: '0 12 * * *'
+    - cron: "0 12 * * *"
   workflow_dispatch:
 
 jobs:
   main:
     strategy:
       matrix:
-        addon: [ sabnzbd, sonarr, radarr, lidarr ]
+        addon: [sabnzbd, sonarr, radarr, lidarr]
     uses: ./.github/workflows/check-create-pr.yml
     with:
       addon: ${{ matrix.addon }}
       ref: ${{ github.ref }}
     secrets:
-      token: ${{ secrets.PAT }}
+      token: ${{ secrets.GITHUB_TOKEN }}
