--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -9,6 +9,9 @@ on:
       version:
         required: true
         type: string
+      publish:
+        default: false
+        type: boolean
       ref:
         type: string
     outputs:
@@ -59,5 +62,6 @@ jobs:
     with:
       addon: ${{ inputs.addon }}
       ref: ${{ needs.pr.outputs.ref }}
+      publish: ${{ inputs.publish }}
     secrets:
       token: ${{ secrets.token }}
