--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -65,20 +65,5 @@ jobs:
           IMAGE: "${{ steps.dockerfile.outputs.user }}/${{ steps.dockerfile.outputs.image }}"
           REPO: ${{ steps.dockerfile.outputs.repo }}
         run: |
-          digest=latest
-          media_type='application/vnd.oci.image.index.v1+json'
-          token=$(curl -sG --data-urlencode "scope=repository:${IMAGE}:pull" "https://${REPO}/token" | jq -r '.token')
-          while [[ "$media_type" == 'application/vnd.oci.image.index.v1+json' ]]; do
-            response=$(curl --silent \
-              --header "Accept: ${media_type}" \
-              --header "Authorization: Bearer ${token}" \
-              "https://${REPO}/v2/${IMAGE}/manifests/${digest}")
-            media_type=$(echo $response | jq -r '.manifests | first | .mediaType')
-            digest=$(echo $response | jq -r '.manifests | first | .digest')
-          done
-          digest=$(echo $response | jq -r .config.digest)
-          EXT_VERSION=$(curl --silent --location \
-            --header "Authorization: Bearer ${token}" \
-            "https://${REPO}/v2/${IMAGE}/blobs/${digest}" \
-            | jq -r '.container_config // .config | .Labels["org.opencontainers.image.version"]')
+          EXT_VERSION=$(scripts/get-container-label.sh org.opencontainers.image.version "$REPO" "$IMAGE")
           echo "version=${EXT_VERSION}" >> "$GITHUB_OUTPUT"
