--- a/radarr/config.json
+++ b/radarr/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Radarr",
-  "version": "5.17.2.9580-ls253",
+  "version": "5.17.2.9580-ls253-x",
   "slug": "radarr",
   "description": "A fork of Sonarr to work with movies à la Couchpotato.",
   "url": "https://github.com/evilmarty/hassio-addons/tree/master/radarr",
