--- a/sabnzbd/config.json
+++ b/sabnzbd/config.json
@@ -1,6 +1,6 @@
 {
   "name": "SABnzbd",
-  "version": "4.4.1-ls196",
+  "version": "4.4.1-ls196-x",
   "slug": "sabnzbd",
   "description": "SABnzbd is an Open Source Binary Newsreader written in Python.",
   "url": "https://github.com/evilmarty/hassio-addons/tree/master/sabnzbd",
